# einbein

./: CMakeLists.txt  README.md  einbein.kdev4
.kdev4/: einbein.kdev4
FPGA/: huepfroboter.rbf  test.rbf
build-arm/: CMakeCache.txt  Makefile  cmake_install.cmake
build-arm/include/einbein/Regelung/Fusspunkt/: Makefile  (+1 more)
build-arm/src/: Makefile  cmake_install.cmake  einbein
build-arm/src/Test/: Makefile  cmake_install.cmake
build-arm/src/Test/Regelung/: Controll  Makefile  cmake_install.cmake  copy2robot.sh  copy2robot.sh.save  lib.sh.in
build-arm/src/mpu9250/: Makefile  cmake_install.cmake
build-arm/test/: Makefile  cmake_install.cmake  dacMot  digIO  fqdMot
include/einbein/: constants.hpp  templates_function.hpp
include/einbein/Regelung/: CSController.hpp
include/einbein/Regelung/Base2Tool/: CSVorKin.hpp  VorKin.hpp  constantFusspunkt.hpp
include/einbein/Regelung/Controller/: CSController.hpp  Controller.hpp  constantController.hpp  zControll.hpp
include/einbein/Regelung/Encoder/: CSEncoder.hpp  Encoder.hpp  TransitionBlockEncoder.hpp
include/einbein/Regelung/IMU/: CSIMU.hpp  IMU.hpp
include/einbein/Regelung/MotorModell/: I2DAC.hpp  MotorModell.hpp
include/einbein/Regelung/PDV/: CSPDV.hpp  PDV.hpp
include/einbein/Regelung/PMotor/: PMotor.hpp  constantsPMotor.hpp
include/einbein/Regelung/Trajektorie/: ControlSystem.hpp  Trajektorie.hpp  constInput.hpp
include/einbein/Regelung/ZustBest/: CSZustBest.hpp  ZustBest.hpp  constantZustBest.hpp
src/: CMakeLists.txt  main.cpp
src/Test/: .main.cpp.kate-swp  CMakeLists.txt
src/Test/Regelung/: CMakeLists.txt  CSControll.cpp  mainControll.cpp  templates_funciton.cpp
src/Test/Regelung/Base2Tool/: CMakeLists.txt  CSVorKin.cpp  VorKin.cpp  mainFusspunkt.cpp
src/Test/Regelung/Controller/: CMakeLists.txt  CSController.cpp  Controller.cpp  mainController.cpp  zControll.cpp
src/Test/Regelung/Encoder/: CMakeLists.txt  CSEncoder.cpp  Encoder.cpp  TransitionBlockEncoder.cpp  mainEncoder.cpp
src/Test/Regelung/IMU/: CMakeLists.txt  CSIMU.cpp  IMU.cpp  mainIMU.cpp
src/Test/Regelung/MotorModell/: I2DAC.cpp  MotorModell.cpp
src/Test/Regelung/PDV/: CMakeLists.txt  CSPDV.cpp  PDV.cpp  mainPDV.cpp
src/Test/Regelung/PMotor/: PMotor.cpp
src/Test/Regelung/Trajektorie/: CMakeLists.txt  ControlSystem.cpp  Trajektorie.cpp  constInput.cpp  main.cpp
src/Test/Regelung/ZustBest/: CMakeLists.txt  CSZustBest.cpp  ZustBest.cpp  mainZustBest.cpp
src/mpu9250/: CMakeLists.txt
src/mpu9250/eMPL/: inv_mpu.c  inv_mpu.h  inv_mpu_dmp_motion_driver.c
src/mpu9250/glue/: linux_glue.c  linux_glue.h
src/mpu9250/mpu9250/: MahonyAHRS.c  matrix3d.h  mpu9250.c  mpu9250.h  quaternion.c  quaternion.h
test/: CMakeLists.txt  dacMot.cpp  digIO.cpp  fqdMot.cpp
(+31 files in other folders)
